[tool.poetry]
name = "geocode"
version = "0.1.0"
description = ""
authors = ["CPR Tech <tech@climatepolicyradar.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
refined = {url = "https://github.com/amazon-science/ReFinED/archive/refs/tags/V1.zip"}
protobuf = "3.20.1"
typer = "^0.15.3"
pydantic = "^2.11.4"
pandas = "<2"
numpy = "1.26.4"
transformers = "4.33.2"
pyarrow = "^20.0.0"
fastparquet = "^2024.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
